force-app/main/default/objects/Tariff_Change_Requested__e/Tariff_Change_Requested__e.object-meta.xml
<CustomObject>
  <label>Tariff Change Requested</label>
  <pluralLabel>Tariff Change Requested</pluralLabel>
  <description>
    The integration seam to the billing system (ADR-020). When a confirmed
    tariff change is applied on the Salesforce side, this event is published. In
    production a MuleSoft subscriber forwards it to SAP IS-U, which owns the
    actual billing registration. In this portfolio org the far side of the seam
    is simulated - but the seam itself is real, published, and
    source-controlled, so the boundary is explicit rather than hand-waved.
  </description>
</CustomObject>