force-app/main/default/objects/Tariff_Change_Requested__e/fields/Account_Id__c.field-meta.xml
<CustomField>
  <fullName>Account_Id__c</fullName>
  <label>Account Id</label>
  <type>Text</type>
  <length>18</length>
  <required>true</required>
</CustomField>