force-app/main/default/objects/Tariff_Change_Requested__e/fields/Annual_Saving__c.field-meta.xml
<CustomField>
    <fullName>Annual_Saving__c</fullName>
    <label>Quoted Annual Saving</label>
    <type>Number</type>
    <precision>14</precision>
    <scale>2</scale>
</CustomField>