force-app/main/default/objects/Tariff_Change_Requested__e/fields/New_Tariff__c.field-meta.xml
<CustomField>
  <fullName>New_Tariff__c</fullName>
  <label>New Tariff</label>
  <type>Text</type>
  <length>80</length>
</CustomField>