force-app/main/default/objects/Tariff_Change_Requested__e/fields/Request_Number__c.field-meta.xml
<CustomField>
  <fullName>Request_Number__c</fullName>
  <label>Request Number</label>
  <type>Text</type>
  <length>40</length>
  <required>true</required>
</CustomField>